--- a/util/code-gen/Cargo.toml
+++ b/util/code-gen/Cargo.toml
@@ -8,3 +8,6 @@ homepage = "https://github.com/nikdeapen/open-rust/util/code-gen"
 authors = ["Nik Deapen <nik@deapen.com>"]
 edition = "2021"
 license = "MIT"
+
+[features]
+rust = []
