--- a/proto-packet/proto-packet-core/Cargo.toml
+++ b/proto-packet/proto-packet-core/Cargo.toml
@@ -8,3 +8,6 @@ homepage = "https://github.com/nikdeapen/open-rust/proto-packet/proto-packet-cor
 authors = ["Nik Deapen <nik@deapen.com>"]
 edition = "2021"
 license = "MIT"
+
+[dependencies]
+code-gen = { path = "../../util/code-gen" }
